# matrix_pqc

./: .gitignore  Cargo.toml  LICENSE  README.md
results/: user_profile_runs_20260201_124053_all_policies.csv  user_profile_runs_20260201_124053_all_policies.paired_analysis.csv
scripts/: analyze.py  analyze_paired.py  compare_baseline.py  requirements.txt
src/: lib.rs  main.rs
src/core/: crypto.rs  double_ratchet_pqc.rs  mod.rs  pqxdh.rs
src/core/providers/: classical.rs  hybrid.rs  mod.rs
src/demos/: mod.rs  user_profile_benchmark.rs
src/protocols/: mod.rs  room.rs
src/tools/: mod.rs  workload.rs
src/utils/: logging.rs  mod.rs  serde_helpers.rs
